WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20028
Dynamically created <animate> elements do not animate upon document insertion as they should
https://bugs.webkit.org/show_bug.cgi?id=20028
Summary
Dynamically created <animate> elements do not animate upon document insertion...
lars.sonchocky-helldorf
Reported
2008-07-13 15:35:39 PDT
http://www.kevlindev.com/tutorials/basics/animation/js_dom_smil/index.htm
does not work: The green rects are drawn but they don't move.
Attachments
Patch
(9.97 KB, patch)
2011-05-26 08:36 PDT
,
Rob Buis
krit
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2008-07-14 12:49:58 PDT
<
rdar://problem/6073950
>
Brad Neuberg
Comment 2
2009-08-05 12:11:01 PDT
I confirm that I'm encountering this bug as well with dynamically created SMIL animate elements: rect = document.createElementNS(svgns, 'rect'); rect.setAttribute('x', 50); rect.setAttribute('y', 50); rect.setAttribute('width', 50); rect.setAttribute('height', 50); rect.setAttribute('fill', '#0f5'); rect.setAttribute('stroke', '#085'); rect.setAttribute('stroke-width', '4'); anim = document.createElementNS(svgns, 'animate'); anim.setAttribute('attributeName', 'x'); anim.setAttribute('calcMode', 'linear'); anim.setAttribute('additive', 'replace'); anim.setAttribute('accumulate', 'none'); anim.setAttribute('from', 50); anim.setAttribute('to', 100); anim.setAttribute('begin', '2s; 5s'); anim.setAttribute('dur', '2s'); anim.setAttribute('fill', 'remove'); rect.appendChild(anim); svg.appendChild(rect);
Rob Buis
Comment 3
2011-05-26 08:36:32 PDT
Created
attachment 94978
[details]
Patch
Dirk Schulze
Comment 4
2011-05-26 09:02:12 PDT
Comment on
attachment 94978
[details]
Patch r=me
Rob Buis
Comment 5
2011-05-26 09:13:29 PDT
Committed
r87392
: <
http://trac.webkit.org/changeset/87392
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug