2011-05-26  Rob Buis  <rbuis@rim.com>

Reviewed by Dirk Schulze.

        Dynamically created <animate> elements do not animate upon document insertion as they should
        https://bugs.webkit.org/show_bug.cgi?id=20028

        Tests: svg/animations/animate-insert-begin.html
               svg/animations/animate-insert-no-begin.html

        Move animation initializing and rescheduling to insertedIntoDocument. This way animate elements
        dynamicaly inserted into the document using js start as well.

        * svg/animation/SVGSMILElement.cpp:
        (WebCore::SVGSMILElement::insertedIntoDocument):
        * svg/animation/SVGSMILElement.h:
2011-05-26  Rob Buis  <rbuis@rim.com>

        Reviewed by Dirk Schulze.

        Dynamically created <animate> elements do not animate upon document insertion as they should
        https://bugs.webkit.org/show_bug.cgi?id=20028

        Add tests for dynamically inserting <animate>.

        * svg/animations/animate-insert-begin-expected.txt: Added.
        * svg/animations/animate-insert-begin.html: Added.
        * svg/animations/animate-insert-no-begin-expected.txt: Added.
        * svg/animations/animate-insert-no-begin.html: Added.
        * svg/animations/script-tests/animate-insert-begin.js: Added.
        (sample1):
        (sample2):
        (executeTest):
        * svg/animations/script-tests/animate-insert-no-begin.js: Added.
        (sample1):
        (sample2):
        (executeTest):


Canonical link: https://commits.webkit.org/76943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87392 268f45cc-cd09-0410-ab3c-d52691b4dbfc